test/tests/stages/18_structures/invalid_parse/extra_credit/union_decl_bad_type_specifier.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[23]:
  union
  identifier(a)
  {
  int
  identifier(a)
  ;
  }
  ;
  int
  identifier(main)
  (
  void
  )
  {
  union
  identifier(a)
  int
  identifier(x)
  ;
  return
  const int(0)
  ;
  }
